# restaurant-review

./: .gitignore  README.md  pyproject.toml  secret.json
config/: models.py  settings.py  urls.py  views.py
restaurants/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py  0002_remove_restaurant_address_and_more.py  0003_restaurant_address_restaurant_close_time_and_more.py
review-env/: pyvenv.cfg
reviews/: models.py  serializers.py  tests.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_remove_review_modified_at_review_updated_at_and_more.py  0003_alter_review_title.py
templates/: login.html  main.html  restaurant_detail.html  restaurant_list.html  review_create.html  review_list.html  signup.html
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
